--- a/src/components/dialogs/css/dialog.css
+++ b/src/components/dialogs/css/dialog.css
@@ -13,8 +13,9 @@
 }
 
 .modal-container {
-    background: #000000;
+    background: #FFFFFF;
     border: 1px solid #ffffff;
+    border-radius: 10px;
     box-sizing: border-box;
     box-shadow: -2px -2px 5px rgba(255, 255, 255, 0.14), 2px 2px 5px rgba(0, 0, 0, 0.1), inset 2px 2px 2px rgba(255, 255, 255, 0.12);
     min-width: 650px;
