--- a/src/components/header/metamask/css/Metamask.css
+++ b/src/components/header/metamask/css/Metamask.css
@@ -1,27 +1,63 @@
-.metamask {
-    border-radius: 25px;
-    padding: 10px 20px;
+.metamask{
+    border-radius: 50px;
+    padding: 20px 20px;
+    background-color: #FFFFFF;
 }
 
 .metamask-enable img {
     filter: saturate(0);
 }
 
+.metamask-enable {
+    border-style: solid;
+    border-width: 1px;
+    border-color: #000000;
+}
+
+.metamask-connected {
+    border-style: solid;
+    border-width: 1px;
+    border-color: var(--sos-accent-color);
+    color: var(--sos-accent-color);
+}
+
+
 .metamask-disable {
     border-style: solid;
-    border-width: 2px;
-    border-color: white;
-    background-color: black;
+    border-width: 1px;
+    border-color: #000000;
 }
 
 .metamask img {
     width: 21px;
     height: 20px;
-    margin-left: 10px;
+    margin-right: 10px;
 }
 
 .metamask p {
     margin-bottom: 0;
     user-select: none;
+}
+
+.metamask-button,
+.metamask-button:focus {
+    opacity: 1;
+    border-width: 1px;
+    border-color: black;
+    background-color: white;
+    color: black;
+    cursor: pointer;
+    box-shadow: none !important;
+    border-radius: 50px;
+    padding: 20px 20px;
+    font-size: 18px;
+    font-weight: 500;
+}
+
+.metamask-button:hover,
+.metamask-button:active {
+    background-color: var(--sos-accent-alt-color);
+    border-color: black;
+    color: black;
 }
 
